frontend/src/styles/loading.scss
@import "variables";

.loading {
    z-index: 800;
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 115px;

    &__text {
        height: 60%;
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        &__header {
            width: 75%;
            font-size: 1em;
            font-family: $font-header;
            font-weight: normal;
            line-height: 1.14em;
            padding-top: 0.4em;

            &__main {
                padding-right: 100px;
            }

            &__numbers {
                font-size: 0.96em;
                font-family: $font-info;
                font-weight: normal;
                padding: 0 0.61em 0 0.61em;
            }

            &__reversed {
                color: $color-black;
                -webkit-text-stroke-width: 2px;
                -webkit-text-stroke-color: $color-white;
                position: relative;

                &::after {
                    border-bottom: 0.125em solid $color-white;
                    content: "";
                    left: 0;
                    margin-top: calc(0.125em / 2 * -1);
                    position: absolute;
                    right: 0;
                    top: 50%;
                    opacity: 0;
                    transition: .4s ease-in-out opacity;
                }

                &:hover::after {
                    opacity: 1;
                }
            }
        }

        &__info {
            font-family: $font-info;
            font-size: 0.14em;
            margin-top: 0.3em;
            opacity: 0.5;
        }
    }

    &__banners {
        height: 40%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        overflow: hidden;

        &__banner {
            img {
                height: 87px;
                pointer-events: none;
            }
        }

        &__banner-dark:nth-child(3) {
            transform: scale(1,-1) translateY(15px);
        }
    }
}

@media (max-width: 1465px) {
    .loading {
        font-size: 90px;

        &__text {
            &__header {
                display: flex;
                flex-direction: column;
                text-align: center;
            }
        }
    }
}

@media (max-width: 1000px) {
    .loading {
        font-size: 70px;
    }
}

@media (max-width: 700px) {
    .loading {
        font-size: 50px;

        &__text {
            &__header {
                width: 95%;

                &__reversed {
                    -webkit-text-stroke-width: 1px;
                }
            }
        }
    }
}

